Fix map presented too small in Internet Explorer

--- a/web/profiles/findit/css/admin.css
+++ b/web/profiles/findit/css/admin.css
@@ -2,3 +2,8 @@ tr.odd .form-item .label-description,
 tr.even .form-item .label-description {
     white-space: normal;
 }
+
+.ie svg {
+  width: 100%;
+  height: 50em;
+}
